--- a/glulxtoc/src/output/templates/CMakeLists.txt
+++ b/glulxtoc/src/output/templates/CMakeLists.txt
@@ -32,4 +32,5 @@ target_include_directories(glulxe PUBLIC WORKSPACE/upstream/glulxe/)
 add_executable(NAME)
 target_link_libraries(NAME cheapglk glulxe)
 add_sources(NAME "OUTDIR/"
-    SRCS exec.c functions_safe.c functions_unsafe.c image.c unixstrt.c)
+    SRCS exec.c functions_safe.c functions_unsafe.c image.c runtime.c
+    unixstrt.c)
