Support OP_CALL and OP_TAILCALL

--- a/glulxtoc/Cargo.toml
+++ b/glulxtoc/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fnv = "1.0.7"
 if-decompiler = {path = "../if-decompiler"}
 structopt = "0.3.13"
