--- a/relooper/Cargo.toml
+++ b/relooper/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "if-decompiler"
+name = "relooper"
 version = "0.1.0"
 authors = ["Dannii Willis <curiousdannii@gmail.com>"]
 edition = "2018"
@@ -7,7 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = "1.0.1"
 fnv = "1.0.7"
-petgraph = "0.5.1"
-relooper = {path = "../relooper"}
