Pull out a node from a loop if there are no next edges (#5)

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,5 +14,15 @@ jobs:
           toolchain: stable
       - run: ./tests/download.sh
       - run: cargo test --package relooper
-      - run: cargo build
+
+  test-disassembler:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - run: ./tests/download.sh
       - run: ./tests/runtest.sh -f tests/glulxercise.ulx -d
