Switch to Clang because of a GCC bug https://gcc.gnu.org/bugzilla/show_bug.cgi?id=100393

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,15 +14,5 @@ jobs:
           toolchain: stable
       - run: ./tests/download.sh
       - run: cargo test --package relooper
-
-  test-disassembler:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - run: ./tests/download.sh
+      - run: cargo build
       - run: ./tests/runtest.sh -f tests/glulxercise.ulx -d
