--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - run: ./tests/download.sh
+      - run: ./tests/prepare.sh
       - run: cargo build
       - run: cargo test --package relooper
       - run: ./tests/runtest.sh -f tests/glulxercise.ulx -d
