--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,3 +18,4 @@ jobs:
       - run: ./tests/runtest.sh -f tests/glulxercise.ulx -d
       - run: ./tests/runtest.sh -f tests/glulxercise.ulx -u 27057
       - run: ./tests/runtest.sh -f tests/advent.ulx
+      - run: ./tests/runtest.sh -f tests/advent.ulx -r
